RESOLVED FIXED104988
Don't assert that flags <= 0x3ff in JSTypeInfo
https://bugs.webkit.org/show_bug.cgi?id=104988
Summary Don't assert that flags <= 0x3ff in JSTypeInfo
Filip Pizlo
Reported 2012-12-13 20:14:44 PST
It causes crashes. Patch forthcoming.
Attachments
the patch (1.30 KB, patch)
2012-12-13 20:15 PST, Filip Pizlo
sam: review+
Filip Pizlo
Comment 1 2012-12-13 20:15:42 PST
Created attachment 179407 [details] the patch
Filip Pizlo
Comment 2 2012-12-13 20:21:34 PST
Note You need to log in before you can comment on or make changes to this bug.